<resources>
    <string name="facebook_app_id"></string>
    <string name="app_name">ஏறுதழுவல்</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="thirukural_sec">வெள்ளத் தனைய மலர்நீட்டம் மாந்தர்தம் \nஉள்ளத் தனைய துயர்வு.</string>
    <string name="thirukural_main">உள்ளுவ தெல்லாம் உயர்வுள்ளல் மற்றது \nதள்ளினுந் தள்ளாமை நீர்த்து.</string>
    <string name="trends">Trend</string>
    <string name="tap_to_check">Tap here to know more</string>
    <string name="btn_more">MORE</string>
    <string name="thirukural_head">Thirukural</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="tournament">Tournament</string>
    <string name="super_cric_heroes">Manjuvirattu Heros</string>
    <string name="heroes_msg">Tap to check their profile</string>
    <string name="super_bull_heroes">Stunning bull Tampering</string>
    <string name="bull_heroes_msg">Tap to check their profile</string>
    <string name="error_icon"></string>
    <string name="right_icon"></string>
    <string name="warning_icon"></string>
    <string name="error_msg_please_select_any_player">Select any player</string>
    <string name="btn_title_add">Add</string>
    <string name="no_media_found">No media found</string>
    <string name="remove_me">Remove me</string>
    <string name="join_with_google">Join us with google</string>
    <string name="join_with_facebook">Join us with facebook</string>
    <string name="sign_with_email">Continue with email</string>

    <string name="tab_title_Cricheroes">Cricheroes</string>
    <string name="tab_title_Leaderboard">Leaderboard</string>
    <string name="tab_title_about_us">About Us</string>
    <string name="tab_title_awards">Awards</string>
    <string name="tab_title_badges">Badges</string>
    <string name="tab_title_boundary_tracker">Boundary Tracker</string>
    <string name="tab_title_commentary">COMMENTARY</string>
    <string name="tab_title_connections">Connections</string>
    <string name="tab_title_graph">ANALYSIS</string>
    <string name="tab_title_heroes">HEROES</string>
    <string name="tab_title_info">Info</string>
    <string name="tab_title_location">Location</string>
    <string name="tab_title_matches">Matches</string>
    <string name="tab_title_media">GALLERY</string>
    <string name="tab_title_member">Members</string>
    <string name="tab_title_photos">Photos</string>
    <string name="tab_title_profile">Profile</string>
    <string name="tab_title_scorecard">SCORECARD</string>
    <string name="tab_title_sponsor">Sponsors</string>
    <string name="tab_title_standings">Standings</string>
    <string name="tab_title_stats">Stats</string>
    <string name="tab_title_status">Status</string>
    <string name="tab_title_summary">SUMMARY</string>
    <string name="tab_title_teams">Teams</string>
    <string name="tab_tournament">Tournaments</string>
    <string name="msg_under_development">Under development</string>
    <string name="loading">Loading</string>
    <string name="load_failed">Try again</string>
    <string name="load_end">End of the list</string>
    <string name="follow">Follow</string>
    <string name="followers">Followers</string>
    <string name="followings">Following</string>

    <string name="click_write_mesg">Write message</string>
    <string name="contact_phone_number">+91 8667730776</string>
    <string name="speak_mesg">If you need urgent help, call following number</string>

    <string name="font_roboto_slab_bold">RobotoSlab_Bold.ttf</string>
    <string name="font_roboto_slab_light">RobotoSlab_Light.ttf</string>
    <string name="font_roboto_slab_regular">RobotoSlab_Regular.ttf</string>
    <string name="font_sourcesans_pro_bolditalic">SourceSansPro_BoldItalic.ttf</string>
    <string name="font_sourcesans_pro_extralight">SOURCESANSPRO_EXTRALIGHT.TTF</string>
    <string name="font_sourcesans_pro_italic">SourceSansPro_Italic.ttf</string>
    <string name="font_sourcesans_pro_light">SourceSansPro_Light.ttf</string>
    <string name="font_sourcesans_pro_regular">SourceSansPro_Regular.ttf</string>
    <string name="font_sourcesans_pro_semibold">SourceSansPro_Semibold.ttf</string>
    <string name="title_contact">Contact us</string>

    <string name="tab_write">WRITE</string>
    <string name="tab_speak">SPEAK</string>
    <string name="words">0/200 (words)</string>
    <string name="write_mesg">If you want to score a tournament, please give us your details. We will call you back.</string>
    <string name="_0_200_words">0/200 (words)</string>
    <string name="btn_send">Send</string>


    <string name="error_please_enter_name">Please Enter Name</string>
    <string name="error_please_enter_phone_number">Please Enter Phone Number</string>
    <string name="error_please_enter_pin">Please enter PIN</string>
    <string name="error_please_enter_valid__phone_number">Please Enter Valid Phone Number</string>
    <string name="alert_no_internet_found">No internet found</string>
    <string name="comment_limit">Comment should not be greater then 200 words.</string>
    <string name="hint_write_comment">Comment*</string>
    <string name="hint_write_mobile_number">Mobile Number*</string>
    <string name="hint_write_name">Name*</string>
    <string name="error_please_enter_valid_email">Kindly enter valid email</string>
    <string name="title_update">Update</string>

    <string name="hint_enter_number">Enter Number</string>
    <string name="hint_enter_referral_code">Enter Referral Code</string>
    <string name="hint_enter_your_phone_number">Phone Number</string>
    <string name="hint_full_name">Enter Full Name*</string>
    <string name="hint_ground">Ground *</string>
    <string name="hint_location">location *</string>
    <string name="hint_mobile_number">Mobile number</string>
    <string name="hint_name">Name</string>
    <string name="hint_no_of_overs_html">No. of Overs *</string>
    <string name="hint_password">Password</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_team_name">Team Name *</string>
    <string name="hint_date_and_time">Date and Time</string>
    <string name="hint_date_of_birth">Date of Birth</string>
    <string name="hint_email_address">Email address</string>
    <string name="dummy_bio">Mahendra Singh Dhoni (About this sound pronunciation (help·info); commonly known as MS Dhoni; born 7 July 1981) is an Indian cricketer who captained the Indian team in limited-overs formats from 11th of September 2007 to 4th of January 2017 and in Test cricket from 2008 to 28th of December 2014. An attacking right-handed middle-order batsman and wicket-keeper, he is widely regarded as one of the greatest finishers in limited-overs cricket.[2][3][4][5] He is also regarded to be one of the best wicket-keepers in world cricket and is known to have very fast hands.[6][7] He made his One Day International (ODI) debut in December 2004 against Bangladesh, and played his first Test a year later against Sri Lanka.</string>
    <string name="lorem">asdmfknnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnn akjsdbnfkjcv kaswdjfb     kajdbfkjdsbjkfbksdbffs</string>
    <string name="login">Login</string>
    <string name="processing">Processing</string>
    <string name="upcoming">Upcoming</string>
    <string name="on_going">Live</string>
    <string name="recent">Past</string>
    <string name="following">Following</string>
    <string name="unfollow">UnFollow</string>
    <string name="btn_positive">Okay</string>
    <string name="btn_negative">Cancel</string>
    <string name="unfollow_alert">Are you sure you want to unfollow</string>


    <string name="Save">Save</string>
    <string name="choose_an_image">Choose an Image</string>
    <string name="Enter_your_display_name">Enter your display name</string>
    <string name="Enter_a_short_bio">Enter a short bio</string>
    <string name="bulls">bulls</string>
    <string name="City">City</string>
    <string name="email">email</string>
    <string name="about">About</string>



    <string name="camera">Camera</string>
    <string name="profile_image">Profile Image</string>
    <string name="gallery">Gallery</string>
    <string name="english">English</string>
    <string name="tamil">தமிழ்</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
</resources>
