<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical">

    <pasu.vadivasal.view.TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end"
        android:layout_marginTop="10dp"
        app:asset_font_file_name="@string/font_sourcesans_pro_italic"
        android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end"
        android:padding="@dimen/dp_15"
        android:text="@string/speak_mesg"
        android:textAllCaps="false"
        android:textColor="@color/gray_text"
        android:textSize="@dimen/sp_16" />

    <RelativeLayout
        android:id="@+id/rel_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="?attr/actionBarItemBackground">

        <pasu.vadivasal.view.CircleImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end"
            app:civ_border_color="@color/light_grey"
            app:civ_border_width="1dp"
            android:src="@color/background_color" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:scaleType="centerInside"
            android:src="@drawable/contactus_call" />
    </RelativeLayout>

    <pasu.vadivasal.view.TextView
        android:id="@+id/txt_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        app:asset_font_file_name="@string/font_sourcesans_pro_semibold"
        android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end"
        android:text="@string/contact_phone_number"
        android:textAllCaps="false"
        android:textColor="@color/red_text"
        android:textSize="32sp" />

    <pasu.vadivasal.view.TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:asset_font_file_name="@string/font_roboto_slab_regular"
        android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end"
        android:text="@string/click_write_mesg"
        android:textAllCaps="true"
        android:textColor="@color/gray_text"
        android:textSize="@dimen/sp_14" />
</LinearLayout>
