<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:background="@color/background_color"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dp_15"
                android:paddingRight="@dimen/dp_15">

                <pasu.vadivasal.view.TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end"
                    android:layout_marginTop="10dp"
                    app:asset_font_file_name="@string/font_sourcesans_pro_italic"
                    android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end"
                    android:padding="@dimen/dp_5"
                    android:text="@string/write_mesg"
                    android:textAllCaps="false"
                    android:textColor="@color/gray_text"
                    android:textSize="@dimen/sp_16" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ilName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:hint="@string/hint_write_name"
                    android:textColorHint="@color/dark_gray_50_opacity">

                    <pasu.vadivasal.view.EditText
                        android:id="@+id/edt_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:asset_font_file_name="@string/font_sourcesans_pro_regular"
                        android:imeOptions="actionNone|actionSearch|actionSend|actionNext|actionDone|actionPrevious"
                        android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone"
                        android:lines="1"
                        android:textColor="@color/dark_gray"
                        android:textSize="@dimen/sp_16" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:hint="@string/hint_write_mobile_number"
                    android:textColorHint="@color/dark_gray_50_opacity">

                    <pasu.vadivasal.view.EditText
                        android:id="@+id/edt_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:asset_font_file_name="@string/font_sourcesans_pro_regular"
                        android:imeOptions="actionNone|actionSearch|actionSend|actionNext|actionDone|actionPrevious"
                        android:inputType="number|numberSigned|numberDecimal|numberPassword|phone"
                        android:lines="1"
                        android:textColor="@color/dark_gray"
                        android:textSize="@dimen/sp_16" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:hint="@string/hint_write_comment"
                    android:textColorHint="@color/dark_gray">

                    <pasu.vadivasal.view.EditText
                        android:id="@+id/edt_comment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:asset_font_file_name="@string/font_sourcesans_pro_regular"
                        android:imeOptions="actionNone|actionSearch|actionNext|actionPrevious"
                        android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone"
                        android:maxHeight="100dp"
                        android:textColor="@color/dark_gray"
                        android:textSize="@dimen/sp_16" />
                </android.support.design.widget.TextInputLayout>

                <pasu.vadivasal.view.TextView
                    android:id="@+id/txt_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    app:asset_font_file_name="@string/font_sourcesans_pro_italic"
                    android:text="@string/_0_200_words"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sp_12" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <pasu.vadivasal.view.Button
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill"
        app:asset_font_file_name="@string/font_sourcesans_pro_semibold"
        android:background="@drawable/ripple_btn_save"
        android:padding="@dimen/dp_15"
        android:gravity="center"
        android:text="@string/btn_send"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16"
        android:visibility="visible" />
</LinearLayout>
