<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:id="@+id/inner_content"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="2dp"
        android:background="@color/white"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/paymentdialog_rgrp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/paymentdialog_rbtn_cash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/english" />

            <RadioButton
                android:id="@+id/paymentdialog_rbtn_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tamil" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="16dp"
            android:background="@color/linebottom_light" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">


            <Button
                android:id="@+id/paymentdialog_btn_cancel"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/black" />

            <View
                android:id="@+id/for_sep"
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/linebottom_light" />

            <Button
                android:id="@+id/paymentdialog_btn_submit"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
