<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="56dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:src="@drawable/images"
            android:visibility="visible" />

        <!--  Name Label -->
        <Button
            android:id="@+id/google_signup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:textColor="@color/white"
            android:background="#d34836"
            android:text="@string/join_with_google" />

        <Button
            android:id="@+id/facebook_signup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/com_facebook_blue"
            android:layout_marginTop="24dp"
            android:textColor="@color/white"
            android:text="@string/join_with_facebook" />

        <Button
            android:id="@+id/email_signup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:text="@string/sign_with_email" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/button_facebook_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="Create Account"
            android:visibility="gone" />

        <TextView
            android:id="@+id/link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="Already a member? Login"
            android:textSize="16dip" />

    </LinearLayout>
</ScrollView>