<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:background="@color/white"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/common_margin">

        <android.support.design.widget.TextInputLayout
            android:hint="@string/hint_name"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_width="match_parent"
            android:textColorHint="@color/dark_gray_50_opacity">

            <pasu.vadivasal.view.EditText
                app:asset_font_file_name="@string/font_sourcesans_pro_regular"
                android:id="@+id/edtName"
                android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|numberDecimal|phone"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:lines="1"
                android:textColor="@color/dark_gray"
                android:textColorHint="#000000" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:hint="@string/hint_location"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_width="match_parent"
            android:textColorHint="@color/dark_gray_50_opacity">

            <AutoCompleteTextView
                android:id="@+id/edtLocation"
                android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|numberDecimal|phone"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/x_small_padding"
                android:layout_width="match_parent"
                android:textSize="@dimen/x_small_text" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <android.support.design.widget.TextInputLayout
                android:hint="@string/hint_date_of_birth"
                android:id="@+id/tilDOB"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:layout_weight="1.0"
                android:layout_width="match_parent"
                android:textColorHint="@color/dark_gray_50_opacity">

                <pasu.vadivasal.view.EditText
                    app:asset_font_file_name="@string/font_sourcesans_pro_regular"
                    android:id="@+id/tvDOB"
                    android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|numberDecimal|phone"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:lines="1"
                    android:textColor="@color/dark_gray"
                    android:textColorHint="#000000" />
            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/ivClear"
                android:layout_alignRight="@+id/tilDOB"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingTop="@dimen/dp_15"
                android:src="@drawable/close_cross"
                android:visibility="visible" />
        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:hint="@string/hint_email_address"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_width="match_parent"
            android:textColorHint="@color/dark_gray_50_opacity">

            <pasu.vadivasal.view.EditText
                app:asset_font_file_name="@string/font_sourcesans_pro_regular"
                android:id="@+id/edtEmail"
                android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone|time"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:lines="1"
                android:textColor="@color/dark_gray"
                android:textColorHint="#000000" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:hint="@string/hint_mobile_number"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_width="match_parent"
            android:textColorHint="@color/dark_gray_50_opacity">

            <pasu.vadivasal.view.EditText
                app:asset_font_file_name="@string/font_sourcesans_pro_regular"
                android:id="@+id/edtMobile"
                android:inputType="number|numberSigned|numberDecimal|numberPassword|phone"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:lines="1"
                android:textColor="@color/dark_gray"
                android:textColorHint="#000000" />
        </android.support.design.widget.TextInputLayout>

        <pasu.vadivasal.view.TextView
            app:asset_font_file_name="@string/font_sourcesans_pro_regular"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-5dp"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_width="match_parent"
            android:text="Playing role"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/sp_14" />

        <android.support.v7.widget.AppCompatSpinner
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:id="@+id/spinPlayingRole"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

        <pasu.vadivasal.view.TextView
            app:asset_font_file_name="@string/font_sourcesans_pro_regular"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-5dp"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_width="match_parent"
            android:text="Batting style"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/sp_14" />

        <android.support.v7.widget.AppCompatSpinner
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:id="@+id/spinBatingStyle"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

        <pasu.vadivasal.view.TextView
            app:asset_font_file_name="@string/font_sourcesans_pro_regular"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-5dp"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_width="match_parent"
            android:text="Bowling style"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/sp_14" />

        <android.support.v7.widget.AppCompatSpinner
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:id="@+id/spinBowlingStyle"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

        <pasu.vadivasal.view.Button
            android:background="@drawable/ripple_btn_save"
            android:id="@+id/btnUpdate"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_width="match_parent"
            android:text="@string/title_update"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
